--- a/FlameCsv.Core/Runtime/Dematerializer.Generated.tt
+++ b/FlameCsv.Core/Runtime/Dematerializer.Generated.tt
@@ -126,7 +126,7 @@ internal sealed class Dematerializer<T, <#= generics #>>
         }
 #>
 
-    public void Write<TWriter>(CsvFieldWriter<T, TWriter> writer, [AllowNull] TValue value) where TWriter : struct, System.Buffers.IBufferWriter<T>
+    public void Write(ref readonly CsvFieldWriter<T> writer, [AllowNull] TValue value)
     {
 <#
         for (var i = 0; i < current; i++)
